# brain-games

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml  setup.cfg
brain_games/: all_logik_game.py  calc.py  cli.py  engine.py  even.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
